Finished the slider caroussel in the stack section. Also repaired scrollbar behaviour for the side beacuase of slider caroussel issues. Next step is implementing a caroussel for the mobile view

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -80,6 +80,10 @@
   font-family: 'Archivo', sans-serif;
 }
 
+html, body .stack {
+  overflow-x: hidden;
+}
+
 html {
   // Verhindert das die Überschrift unter die sticky navbar fällt
   scroll-padding-top: 5rem;
@@ -266,24 +270,24 @@ body {
 
 // JUST FOR OPTICAL BORDERS
 
-.about__me {
-  height: 100vh;
-  border: 1px solid red;
-}
+// .about__me {
+//   height: 100vh;
+//   border: 1px solid red;
+// }
 
-.stack {
-  height: 100vh;
-  border: 1px solid blue;
-}
+// .stack {
+//   height: 100vh;
+//   border: 1px solid blue;
+// }
 
 .projects {
   height: 100vh;
-  border: 1px solid violet;
+  // border: 1px solid violet;
 }
 
 .contact {
   height: 100vh;
-  border: 1px solid green;
+  // border: 1px solid green;
 }
 
 // DELETE UPER PART LATER
