--- a/src/styles/stack.scss
+++ b/src/styles/stack.scss
@@ -10,8 +10,8 @@
     flex-direction: column;
     justify-content: start;
     align-items: center;
-
-
+    overflow-x: hidden;
+    
     &>* {
       margin: 3rem;
     }
@@ -22,7 +22,6 @@
       margin-bottom: -1rem;
       color: var(--teal);
       margin-top: 5rem;
-      // border: 1px solid yellow;
     }
 
     p {
@@ -33,14 +32,45 @@
 
     .outer__element {
       display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
+      flex-wrap: nowrap;
       justify-content: center;
       align-items: center;
-      // border: 1px solid orange;
+      overflow: hidden;
+      width: auto;
+      margin-top: 15rem;
 
       &>* {
         margin: 1rem;
+      }
+
+      // SLIDER
+      .carousel-track {
+        display: flex;
+        position: absolute;
+        left: 0;
+        justify-content: center;
+        align-items: center;
+        height: 80px;
+        gap: 16px;
+        width: 200%;
+        height: 300px;
+        animation: slide 40s linear infinite;
+        
+        // border: 1px solid violet;
+
+        &:hover {
+          animation-play-state: paused;
+        }
+      }
+
+      @keyframes slide {
+        0% {
+          left: 0;
+        }
+
+        100% {
+          left: -100%
+        }
       }
 
       .parallax-effect-glare-scale {
@@ -57,8 +87,8 @@
         box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
         
         .inner__element {
-          width: 100%;
-          height: 100%;
+          width: 200px;
+          height: 300px;
           display: flex;
           flex-direction: column;
           justify-content: center;
@@ -67,8 +97,6 @@
           color: white;
           transform: translateZ(60px);
           position: relative;    
-          // border: 1px solid orange;
-
           transform-style: preserve-3d;
 
           h2 {
@@ -97,6 +125,10 @@
             justify-content: center;
             align-items: center;
 
+            .stack__logo {
+              z-index: 3;
+              transform: translateZ(60px);
+            }
           }
         }
       }
@@ -104,58 +136,5 @@
   }
 }
 
-.stack__logo {
-  z-index: 3;
-  transform: translateZ(60px);
-}
 
-// .html__logo {
-//   width: 115px;
-//   height: 115px;
-//   // scale: 0.225;
-// }
-
-// .css__logo {
-//   scale: 0.08;
-// }
-
-// .sass__logo {
-//   scale: 0.02;
-// }
-
-// .bootstrap__logo {
-//   scale: 0.12;
-// }
-
-// .js__logo {
-//   scale: 0.3;
-// }
-
-// .ts__logo {
-//   scale: 0.16;
-// }
-
-// .react__logo {
-//   scale: 0.2;
-// }
-
-// .node__logo {
-//   scale: 0.12;
-// }
-
-// .express__logo {
-//   scale: 0.10;
-// }
-
-// .mongo__logo {
-//   scale: 0.15;
-// }
-
-// .git__logo {
-//   scale: 0.10;
-// }
-
-// .github__logo {
-//   scale: 0.18;
-// }
 
